--- a/src/App.scss
+++ b/src/App.scss
@@ -147,7 +147,7 @@ header h1 {
 	color: #333;
 	font-size: 25px;
 	content: attr(title);
-	position: relative;
+	position: absolute;
 	top: 15px;
 }
 
@@ -316,6 +316,13 @@ header h1 {
 	cursor: pointer;
 }
 
+.modal-open {
+	text-align: left;
+	padding: 10px 15px 10px 15px;
+	cursor: pointer;
+	position: absolute;
+}
+
 .close-icon {
 	color: black;
 	font-weight: lighter !important;
@@ -325,7 +332,7 @@ header h1 {
 	text-align: justify;
 	padding: 5px 5px 0 5px;
 	margin-bottom: 20px;
-	font-size: 12px;
+	font-size: 16px;
 }
 
 .awssld__next {
