fixed up project slides

--- a/src/App.scss
+++ b/src/App.scss
@@ -332,7 +332,7 @@ header h1 {
 	text-align: justify;
 	padding: 5px 5px 0 5px;
 	margin-bottom: 20px;
-	font-size: 16px;
+	font-size: 120%;
 }
 
 .awssld__next {
